# ytx-client

./: .clang-tidy  .clazy  .cmake-format.json  .gitignore  CMakeLists.txt  Info.plist  Info.rc  README.md  generate_cmake_files.py  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindowutils.cc  mainwindowutils.h  qt-mac-shortcuts.kms  qt-win-shortcuts.kms  scan_qt_files.py
audit/: auditdialog.cc  auditdialog.h  auditdialog.ui  auditenum.h  auditinfo.h  auditmodel.cc  auditmodel.h  auditrow.cc  auditrow.h  audittextdelegate.cc  audittextdelegate.h  audittextdialog.ui
audithub/: auditdialog.cc  auditdialog.h  auditdialog.ui  auditentry.cc  auditentry.h  auditenum.h  auditinfo.h  auditmodel.cc  auditmodel.h  auditrow.cc  auditrow.h  audittextdelegate.cc  audittextdelegate.h  audittextdialog.cc  audittextdialog.h  audittextdialog.ui
component/: config.h  constant.h  constantbool.h  constantdouble.h  constantint.h  constantstring.h  constantwebsocket.h  constvalue.h  entryenum.h  enumclass.h  info.h  section.h  sectioncontex.h  signalblocker.h  stringinitializer.cc  stringinitializer.h  tab.h  using.h  viewcontex.h  widgetcontex.h
database/: sqlite.cc  sqlite.h  websocket.h
delegate/: bool.cc  bool.h  boolstring.cc  boolstring.h  checkbox.h  color.cc  databaseroledelegate.cc  databaseroledelegate.h  dboolstring.cc  dboolstring.h  document.cc  document.h  double.cc  double.h  doubleguard.cc  doubleguard.h  filterunit.cc  filterunit.h  financeroledelegate.cc  financeroledelegate.h  int.cc  int.h  intstringnonezero.cc  intstringnonezero.h  issuedtime.cc  issuedtime.h  line.cc  line.h  lineguard.cc  lineguard.h  markstatus.cc  markstatus.h  plaintext.cc  plaintext.h  plaintextguard.cc  plaintextguard.h  rhsnode.cc  rhsnode.h  specificunit.cc  status.cc  (+9 more)
dialog/: about.cc  about.h  about.ui  audittextdialog.cc  audittextdialog.h  authdialog.cc  authdialog.h  authdialog.ui  editdocument.cc  editdocument.h  editdocument.ui  editnodename.cc  editnodename.h  editnodename.ui  editnodenameo.cc  editnodenameo.h  editnodenameo.ui  login.cc  login.h  login.ui  preferences.cc  preferences.h  preferences.ui  registerdialog.cc  registerdialog.h  registerdialog.ui  removenode.cc  removenode.h  tagmanagerdlg.cc  tagmanagerdlg.h  tagmanagerdlg.ui  userprofiledialog.cc  userprofiledialog.h  userprofiledialog.ui  workspacememberdialog.cc  workspacememberdialog.h  workspacememberdialog.ui
entryhub/: entryhub.cc  entryhub.h  entryhubf.cc  entryhubf.h  entryhubi.cc  entryhubi.h  entryhubo.cc  entryhubo.h  entryhubp.cc  entryhubp.h  entryhubs.cc  entryhubs.h  entryhubt.cc  entryhubt.h  prices.h
enum/: authenum.h  entryenum.h  enumclass.h  nodeenum.h  reference.h  section.h  settlementenum.h  stateenum.h  statementenum.h  statusenum.h  syncenum.h  tagenum.h  workspacerole.h
global/: collator.h  concepts.h  dailylogger.cc  dailylogger.h  databasemanager.cc  databasemanager.h  entrypool.h  entryshadowpool.h  exportexcel.cc  exportexcel.h  leafsstation.cc  leafsstation.h  logininfo.cc  logininfo.h  masterdataregistry.h  nodepool.h  partner_inventory_registry.cc  partner_inventory_registry.h  password_encryption.cc  password_encryption.h  printhub.cc  printhub.h  resourcepool.h  supportsstation.cc  supportsstation.h  tablesstation.cc  tablesstation.h  userprofile.h  websocket.cc  websocket.h
inventory_heat/: inventoryheatdialog.cc  inventoryheatdialog.h  inventoryheatdialog.ui  inventoryheatenum.h  inventoryheatmodel.cc  inventoryheatmodel.h  inventoryheatrow.h
licence/: licence.cc  licence.h
mainwindow/: balance_sheet.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindow_account.cc  mainwindow_account.cpp  mainwindow_audit.cc  mainwindow_auth.cc  mainwindow_balance_sheet.cc  mainwindow_cash_flow_statement.cc  mainwindow_charts.cc  mainwindow_connect.cc  mainwindow_context.cc  mainwindow_delegate.cc  mainwindow_entry.cc  mainwindow_global.cc  mainwindow_header.cc  mainwindow_income_statement.cc  mainwindow_inventory_heat.cc  mainwindow_local.cc  mainwindow_node.cc  mainwindow_node_remove.cc  mainwindow_order.cc  mainwindow_order_reference.cc  mainwindow_partner_heat.cc  mainwindow_period_close.cc  mainwindow_sale_reference.cc  mainwindow_search.cc  mainwindow_settlement.cc  mainwindow_statement.cc  mainwindow_tab_widget.cc  mainwindow_tag.cc  mainwindow_view.cc
partner_heat/: partnerheatdialog.cc  partnerheatdialog.h  partnerheatdialog.ui  partnerheatenum.h  partnerheatmodel.cc  partnerheatmodel.h  partnerheatrow.h
period_close/: periodclosedialog.cc  periodclosedialog.h  periodclosedialog.ui  periodclosemodel.cc  periodclosemodel.h
periodclose/: periodclosedialog.cc  periodclosedialog.h  periodclosedialog.ui  periodclosemodel.cc  periodclosemodel.h
print/: printmanager.cc  printmanager.h
print_template/: 1_默认.ini  2_无抬头.ini  3_无单价金额.ini  default.ini
reference/: nodereferenced.h  nodereferencedmodel.cc  nodereferencedmodel.h  nodereferencedwidget.cc  nodereferencedwidget.h  nodereferencedwidget.ui  orderreference.h  orderreferencemodel.cc  orderreferencemodel.h  orderreferencemodelp.cc  orderreferencemodelp.h  orderreferencewidget.cc  orderreferencewidget.h  orderreferencewidget.ui  salereference.h  salereferenceimodel.cc  salereferenceimodel.h  salereferencemodel.cc  salereferencemodel.h  salereferencemodeli.cc  salereferencemodeli.h  salereferencemodelp.cc  salereferencemodelp.h  salereferencepmodel.cc  salereferencepmodel.h  salereferencewidget.cc  salereferencewidget.h  salereferencewidget.ui
report/: entryref.h  printmanager.cc  printmanager.h  settlement.cc  settlement.h  statement.h
resource/: resource.qrc
table/: entry.cc  entry.h  entryshadow.cc  entryshadow.h  trans.h  unitmodel.cc  unitmodel.h
tag/: tag.h  tagdialog.cc  tagdialog.h  tagdialog.ui  tagenum.h  tagicon.h  tagmodel.cc  tagmodel.h  tagrow.h
tree/: excludeidfiltermodel.h  excludeidunitfiltermodel.h  excludeintfiltermodel.h  excludemultiplefiltermodel.h  excludeonefiltermodel.h  excludesetfiltermodel.h  finance_role.cc  finance_role.h  includemultiplefiltermodel.h  includesetfiltermodel.h  (+6 more)
(+513 files in other folders)
